Updated sorting algorithm visualizer with new changes

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
   <div class="footerr">
     <div class="social-media">
       
-      <a href="mailto:starkarvind1@gmail.com"><i class='bx bxl-gmail' ></i></a>
-      <a href="https://www.linkedin.com/in/arvind-sharma-3884a2205/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a>
-      <a href="https://github.com/monk0707" target="_blank"><i class='bx bxl-github' ></i></a>
-      <a href="https://www.instagram.com/arvind_mvrx/" target="_blank"><i class='bx bxl-instagram' ></i></a>
+      <a href="mailto:mail.madhurasn@gmail.com"><i class='bx bxl-gmail' ></i></a>
+      <a href="https://www.linkedin.com/in/madhurasharan/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a>
+      <a href="https://github.com/madhurasharan" target="_blank"><i class='bx bxl-github' ></i></a>
+      <a href="https://www.instagram.com/madhura_sharan/" target="_blank"><i class='bx bxl-instagram' ></i></a>
 
     </div>
 
